# ainulindale-api

./: .dockerignore  .gitignore  .ruff.toml  AGENTS.md  CONTRIBUTING.md  Containerfile  Makefile  README.md  bandit.yaml  pyproject.toml  requirements-dev.in  requirements.txt  test-pr.txt
.github/workflows/: arc-runner-proof.yml  merged-pr-deployment-handoff.yml  pr-ci.yml
docs/: arc-runner-proof.md  arc-runner-reboot-validation.txt  bootstrap-repository-baseline-check.md  chunk-10-close-without-merge-proof.txt  chunk-10-merged-handoff-proof-2.txt  chunk-10-merged-handoff-proof.txt  chunk-10-post-reboot-handoff-proof.txt  chunk-11-end-to-end-happy-path.md  chunk-6-close-without-merge-proof.txt  local-quality-gate.md  lucky-test-13-1782851629.md  main-advance-ainulindale-api.txt  merged-pr-deployment-handoff.md  passing-pr-validation-ainulindale-api.txt  pr-ci-reboot-validation.txt  pr-ci-without-deployment-handoff.md  repository-settings.md  strict-advance-main-ainulindale-api-1782850616.txt  strict-old-pr-ainulindale-api-1782850616.txt  strict-old-pr-ainulindale-api.txt
scripts/: build-image-local.sh  chunk-11-audit.sh  container-smoke.sh  image-metadata-compare.sh  quality-gate.sh  restart-local.sh  smoke-local.sh  smoke-url.sh  validate-arc-proof-workflow.sh  validate-merged-pr-deployment-handoff-workflow.sh  validate-pr-ci-workflow.sh
src/ainulindale_api/: main.py
src/ainulindale_api/core/: db.py  (+2 more)
tests/: test_chunk6_intentional_failure.py  test_contract.py  test_e2e_eridian_echo.py  test_eridian_echo.py  test_eridian_echo_coverage.py  test_main_site.py
(+16 files in other folders)
