[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ainulindale-api"
version = "0.1.0"
description = "Minimal FastAPI API service for Ainulindale"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
  "motor>=3.6.0",
  "google-genai>=0.2.0",
  "python-multipart>=0.0.12",
  "jinja2>=3.1.4",
  "google-auth>=2.0,<3.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8,<9",
  "ruff>=0.12,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ainulindale_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore:.*_UnionGenericAlias.*:DeprecationWarning",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

